LMS.App/ClientApp/src/styles.css
/* ... */
.custom-language-select .ms-options-wrap > button {
  background-image: url(../src/assets/images/school/chevron-down-1.svg);
  background-repeat: no-repeat;
  background-position: right 0.9rem center;
  background-size: 11px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 60px;
}

.custom-language-select .ms-search {
  display: none;
}

.custom-language-select .ms-options {
  background: #ffffff;
  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
  border-radius: 8px;
  position: absolute;
  width: 100%;
  max-height: 250px !important;
}

.custom-language-select ul li::marker,
.custom-language-select ul li::before {
  display: none;
}

.custom-language-select ul {
  padding-left: 0;
}

.custom-language-select ul li {
  margin-bottom: 0;
  padding: 12px 16px;
}

.custom-language-select ul li label {
  display: flex;
  justify-content: space-between;
  flex-direction: row-reverse;
  padding-left: 0px !important;
}

.custom-language-select ul li label input {
  width: 18px;
  height: 18px;
  border: 1px solid #7c8da7;
  border-radius: 7px !important;
  margin-top: 3px;
}

.form-group {
  margin-bottom: 14px;
}

.primary_btn {
  font-weight: 500;
  background: linear-gradient(90.02deg, #ff7b1c 0.02%, #ffa41c 99.98%);
  height: 52px;
  color: #fff !important;
  transition: 0.5s all;
}

.primary_btn:hover {
  background: linear-gradient(90.02deg, #ffa41c 0.02%, #ff7b1c 99.98%);
}

.language-btn .btn-outline-primary,
.language-btn .btn-outline-primary:hover {
  padding: 5px 24px;
  border: 1px solid #e1e1e1;
  color: #313131 !important;
}

.language-btn .btn-check:checked + .btn,
.language-btn .btn.active,
.btn.show,
.language-btn .btn:first-child:active,
.language-btn :not(.btn-check) + .btn:active {
  background-color: #fff;
  border: 2px solid #ff821c;
}

ul li {
  position: relative;
  padding-left: 15px;
  margin-bottom: 16px;
}

ul li:before {
  position: absolute;
  content: "";
  width: 6px;
  height: 6px;
  background: #ffa41c;
  border-radius: 50%;
  left: 0;
  top: 7px;
}

.pb_32 {
  padding-bottom: 32px;
}

.bg_eee {
  background-color: #eeeeee;
}

.my_32 {
  margin-top: 32px;
  margin-bottom: 32px;
}

/* Hide Calendar Icon In Chrome */
input[type="date"]::-webkit-inner-spin-button,
input[type="date"]::-webkit-calendar-picker-indicator {
  opacity: 0;
  -webkit-appearance: none;
}

input[type="date"] {
  background-image: url(../src/assets/images/Calendar.svg);
  background-repeat: no-repeat;
  background-position: center right 16px;
}

/*--- CSS for scroll bar issue---*/
:-webkit-scrollbar {
  width: 7px;
  height: 8px;
}

:-webkit-scrollbar-track {
  background: transparent;
}

:-webkit-scrollbar-thumb {
  background-color: #c7c7c7;
  border-radius: 0;
  border: 0px solid transparent;
  background-color: #000;
}

::-webkit-scrollbar {
  height: 8px;
  border-radius: 0;
  background-clip: padding-box;
  border: 0px solid transparent;
  width: 7px;
  background-color: #e5e5e5;
}

::-webkit-scrollbar-thumb {
  box-shadow: inset 0 0 0 10px #7c8da7;
}

/*--- CSS for scroll bar issue---*/

/*---- Regsiter page css ----*/
.back-step {
  margin-bottom: 70px;
  display: inline-block;
}

.register-section {
  border: 2px solid #ffffff;
  padding: 32px 32px 100px;
  background: url(../src/assets/images/register-bg.svg) no-repeat;
  background-size: cover;
  min-height: calC(100vh - 120px);
}

.register-form {
  max-width: 450px;
}

.register-form h2 {
  margin-bottom: 32px;
}

.al-account {
  margin: 20px 0 32px;
}

/*---- landing page css start here ---*/
.landing-section {
  padding: 85px 65px;
}

.landing-left .form-group {
  margin-bottom: 32px;
}

/*==== User portal css start here ===*/
.sidemenu {
  padding: 28px 25px 63px;
  border-right: 1px solid #eeeeee;
  background: linear-gradient(180deg, #fbfbfb 0%, rgba(251, 251, 251, 0) 100%);
  max-width: 290px;
  min-width: 290px;
  width: 290px;
  position: fixed;
  top: 0;
  left: 0;
  transition: ease-in-out 0.5s;
  z-index: 99;
  bottom: 0;
  display: block;
  overflow-y: auto;
}

.sidemenu ul li:before,
.notification-box .dropdown .dropdown-toggle:after,
ul.before-none li:before,
.after-none:after {
  display: none;
}

.sidemenu li a {
  padding: 8px 10px;
  width: 100%;
  display: block;
  color: #464e5f;
  border-radius: 4px;
}

.sidemenu li a.active {
  background: #464e5f;
  color: #fff;
  font-weight: 700;
}

.sidemenu li a img {
  min-width: 19px;
  margin-right: 18px;
}

.sidemenu h3 {
  margin: 40px 0 24px;
}

.sidemenu_inner {
  display: flex;
  height: 100%;
  min-height: calC(100vh - 110px);
  flex-flow: column;
  justify-content: space-between;
}

.sidemenu-right {
  border-right: 0;
  border-left: 1px solid #eeeeee;
}

.add-btn {
  width: 28px;
  height: 28px;
  background: linear-gradient(90.02deg, #ff7b1c 0.02%, #ffa41c 99.98%);
  margin-left: 20px;
}

.school-name {
  margin-bottom: 30px;
}

.school-img {
  background: #7c8da7;
  width: 31px;
  height: 31px;
  border: 1px solid #bfbfbf;
  overflow: hidden;
  display: inline-flex;
  align-items: center;
  min-width: 31px;
  justify-content: center;
}

h3.subhead-btn {
  margin: 0px 0 28px;
}

.notification-box {
  padding: 28px 0;
}

.notification-btn .badge {
  width: 18px;
  height: 18px;
  background: #ff1c1c;
  position: absolute;
  right: -15px;
  top: -8px;
}

.notification-box ul li {
  margin: 0 20px;
  padding-left: 0;
}

.notification-box .dropdown .dropdown-toggle {
  width: 32px;
  height: 32px;
  border: 2px solid #ffffff;
}

.notification-box .dropdown .dropdown-toggle img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 9999px;
}

.sidemenu .accordion-button::after {
  position: absolute;
  background: url(../src/assets/images/school/chevron-down.svg) no-repeat;
  transition: 0.3s all;
  left: 0;
  top: 50%;
  margin: 0;
  background-position: center;
  transform: translateY(-50%) rotate(180deg);
}
/* ... */

